tests/ui/lazy-type-alias/extern-crate-has-lazy-type-aliases.locally_eager.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/extern-crate-has-lazy-type-aliases.rs:15:12
   |
LL |     let _: lazy::Alias<String>;
   |            ^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
   |
note: required by a bound on the type alias `Alias`
  --> $DIR/auxiliary/lazy.rs:4:19
   |
LL | pub type Alias<T: Copy> = Option<T>;
   |                   ^^^^ required by this bound

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
